--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,11 +1,31 @@
 .App {
   text-align: center;
 }
+body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Roboto', sans-serif;
+  background: #1f4037;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #99f2c8, #1f4037);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #99f2c8, #1f4037); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
+}
+header {
+  text-align: center;
+  background-color: #000000;
+  border: none;
+  font-size: 40px;
+  background: #CFCFC7;
+  background: radial-gradient(circle farthest-side at top center, #CFCFC7 15%, #D6ECFF 18%, #CFC7CB 80%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  text-shadow: 5px 2px 2px rgba(15, 96, 73, 0.4);
+  font-style: italic;
+  -webkit-text-stroke: .75px black;
+}
 .App-header {
   background-color: #222;
-  height: 70px;
-  padding: 20px;
+  padding: 0px;
   color: white;
 }
 
