--- a/src/components/TaskList/TaskList.css
+++ b/src/components/TaskList/TaskList.css
@@ -13,6 +13,7 @@
     padding: 10px;
     font-weight: bold;
     margin-bottom: 10px;
+    margin-left:80px;
   }
   
   #taskListHeader span {
@@ -42,9 +43,7 @@
     font-family: 'Times New Roman', Times, serif;
     font-size: 30px;
     font-style: Bold;
+    margin-left:80px;
     
   }
 
-  #subButton {
-
-  }
